# nVennPy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
docs/: doc.ipynb  requirements.txt
docs/.ipynb_checkpoints/: doc-checkpoint.ipynb
src/: bind.sh  debug.h  doc.ipynb  elements.h  nvenn2.cpp  palettes.h  refreshLibs.sh  scene.h  strFuncts.h  topol.h
src/.ipynb_checkpoints/: doc-checkpoint.ipynb
