[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "nvenn2"
version = "2.0.28"
license = "MIT"
readme = "README.md"
license-files = ["LICEN[CS]E"]
description = "Python bindings to nVenn2 to create generalized, quasi-proportional Venn diagrams"
authors = [
  {name = "Victor Quesada", email = "quesadavictor@uniovi.es"}
]
maintainers = [
  {name = "Victor Quesada", email = "quesadavictor@uniovi.es"}
]
keywords = ["Venn diagram", "Euler diagram", "generalized", "proportional"]
