[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "nvenn2"
version = "2.0.37"
license = "MIT"
readme = "README.md"
license-files = ["LICEN[CS]E"]
description = "Python bindings to nVenn2 to create generalized, quasi-proportional Venn diagrams. Described in [doi 10.1093/bioadv/vbag183](https://doi.org/10.1093/bioadv/vbag183)."
authors = [
  {name = "Victor Quesada", email = "quesadavictor@uniovi.es"}
]
maintainers = [
  {name = "Victor Quesada", email = "quesadavictor@uniovi.es"}
]
keywords = ["Venn diagram", "Euler diagram", "generalized", "proportional"]
